--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,2 +1,8 @@
-.home-page {
-}
+li {
+    list-style: none;
+  }
+  .result {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
