--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,29 +1,34 @@
-/* Header.css */
 .header {
-  background-color: rgba(128, 128, 128, 0.8); /* Light gray color */
-  padding: 10px;
-  text-align: center;
-}
-
-.header nav ul {
-  list-style-type: none;
-  padding: 0;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #333;
+  color: white;
 }
 
-.header nav ul li {
-  margin: 0 15px;
-  font-size: 18px;
+.nav-links {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-.header nav ul li a {
+.nav-links li {
+  margin: 0 10px;
+}
+
+.nav-links a {
   text-decoration: none;
-  color: black;
+  color: white;
   font-weight: bold;
+  transition: color 0.3s;
 }
 
-.header h1 {
-  font-size: 32px;
-  margin-top: 20px;
+.nav-links a:hover {
+  color: #f39c12;
+}
+
+.site-title {
+  font-size: 1.5rem;
 }
